--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Parallax</title>
     <link rel="stylesheet" href="style.css">
     <script src="app.js" defer></script>
 </head>
@@ -33,18 +33,22 @@
             <img src="./img/leaf1.png" class="leaf1" alt="foto">
         </Section>
         <section class="about">
-            <h1>
-                Lorem 
-            </h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis est magni, a nobis magnam doloribus at cumque quisquam. Eligendi quidem obcaecati, natus ad quisquam numquam, atque non dolor earum consequuntur aperiam aliquam tenetur alias pariatur error repellat laborum corrupti unde fugiat ab quos! Eos, iure! Cupiditate soluta exercitationem nesciunt ipsa, numquam eius minima ex dolorum qui libero omnis, voluptates aliquid sequi? Voluptatem debitis tempora illo vel optio mollitia nulla, beatae vitae unde minus dolores veniam id dolorum asperiores illum iste repellat deserunt? Laborum fugiat, voluptatum officia ullam esse repellat in unde veritatis porro eligendi distinctio, nam dignissimos, delectus vitae possimus?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, veritatis possimus doloribus ipsam natus illum consequuntur quas earum dignissimos delectus placeat tempora quam numquam nobis expedita porro sint amet. Dolores iure nihil, quo dolorum sunt repellendus laborum voluptate at voluptatibus, nulla sapiente necessitatibus totam aperiam asperiores. Neque ad dicta necessitatibus error non. Possimus accusamus nemo ipsum cum sint asperiores blanditiis consequatur alias impedit totam dolore aperiam eos velit nam obcaecati doloribus non quos, architecto similique quae ratione molestias quis modi optio. Nobis earum aut vel sequi, blanditiis ipsum quod maxime voluptatum inventore nemo ab alias, officia, officiis nihil delectus reprehenderit?
-            </p>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam reprehenderit est ea sapiente, ipsam voluptatibus similique rem voluptates nostrum iste deserunt temporibus non odit aspernatur adipisci fugiat! Recusandae repudiandae maiores soluta quas quos nam velit id consequatur, deleniti libero sint labore consectetur debitis minus in explicabo at animi fugiat eligendi amet aspernatur est assumenda. Dicta, quasi maiores. Obcaecati earum autem totam placeat illum architecto ab asperiores voluptatum quia quis? Pariatur consectetur unde excepturi sequi et obcaecati aut, voluptate accusamus ipsum odio voluptatum autem veniam eveniet sunt officiis libero vel iste reprehenderit perferendis quibusdam rerum, expedita harum est laudantium? Quod, natus.
-            </p>
+            <div class="container">
+                <div class="about-wrapper">
+                    <div id="aboutContent" class="about-content">
+                        <h1>
+                            Lorem 
+                        </h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis voluptatem neque fugiat sequi asperiores ea quia maxime, fugit nesciunt soluta? Non autem fugiat quibusdam cum libero architecto aperiam ab fuga.
+                        </p>
+                        <h1 id="heading">Заголовок</h1>
+                    </div>
+                    <div class="about-img">
+                        <img src="./img/about-img.png" alt="foto">
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
